add drag n drop

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "svg-to-react",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -28,6 +28,7 @@
     "lucide-react": "^0.452.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone-esm": "^15.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
