--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone-esm": "^15.0.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "thememirror": "^2.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
