--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@codemirror/lang-xml": "^6.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@remix-run/node": "^2.12.1",
