--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/standalone": "^7.26.2",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-xml": "^6.1.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -36,6 +40,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
